2004-07-09  John ffitch  <jpff@codemist.co.uk>

	* OOps/ugrw1.c (itablew): Wrong result returned and elsewhere

	* Engine/otran.c (otran): Move initialisation of pool to start of
	otran so strings work!
	(constndx): from here

2004-07-04  John ffitch  <jpff@codemist.co.uk>

	* strings/all_strings: Added string 226

2004-07-04  Anthony Kozar <anthony.kozar@utoledo.edu>

	* Engine/sread.c (ifa): fixed bugs and improved error reporting in ^+
	and ^- code.

2004-06-27  Michael Gogins <gogins@pipeline.com>

	* Fixed (and simplified) real-time audio input.

2004-06-25  Michael Gogins <gogins@pipeline.com>

	* The CsoundVST Python module now prints Csound messages to Python
	sys.stdout when running in IDLE.

2004-06-25  Anthony Kozar <anthony.kozar@utoledo.edu>

	* These are all changes to allow compilation on MacOS 9
	
	* Top/csound.c:  In declaration of csoundExternalMidiRead(), made mbuf
	 unsigned char* to match other calls.

	* OOps/diskin.c: (newsndinset) changed if (sinfd > 0) to 
	if (sinfd != NULL).

	* Top/dl_opcodes.c: added #else case for platforms without shared 
	libraries.

	* InOut/libsnd.c: added #include "MacTransport.h" for Mac builds.

	* Top/main.c: commented out conditional exclusion of err_printf() for Mac.

	* OOps/sdif-mem.c:
	* SDIF/sdif-mem.c:
	* H/sdif-mem.h:
	* SDIF/sdif-mem.h:
	* OOps/sdif.c:
	* SDIF/sdif.c: changed #include <H/sdif-mem.h> to #include 
	"H/sdif-mem.h" and <H/sdif.h> to "H/sdif.h".

	* H/sftype.h: #defined PACKED for mac_classic

	* H/sysdep.h: undefined mills_macintosh (now defined in Prefix.h) and
	temporarily undefined RTAUDIO for Mac build until PortAudio working.

2004-06-15  John ffitch  <jpff@codemist.co.uk>

	* OOps/aops.c (outo): Skipped +6 case!

2004-06-12  John ffitch  <jpff@codemist.co.uk>

	* OOps/ugens2.c (ftkrchk): 
	* OOps/ugrw1.c: Results of some opcodes were reporting errors
	incorrectly 

2004-06-07  Michael Gogins <gogins@pipeline.com>

	* Changed the CsoundVST module to create a global csound instance of 